Fixes - Added empty spell attribute files for Spell Engine compat

--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -858,7 +858,7 @@
   "item.simplyswords.uniquesworditem.netherfused_power.spellstandard.description3":                                     "Precision & Spellforged.",
 
   "item.simplyswords.uniquesworditem.netherfused_power.warstandard":                                                    "[ Netherfused: War Standard ]",
-  "item.simplyswords.uniquesworditem.netherfused_power.warstandard.description":                                        "At the end of your Bullrush,",
+  "item.simplyswords.uniquesworditem.netherfused_power.warstandard.description":                                        "When using a forward charge ability,",
   "item.simplyswords.uniquesworditem.netherfused_power.warstandard.description2":                                       "drop a War Standard that grants",
   "item.simplyswords.uniquesworditem.netherfused_power.warstandard.description3":                                       "Might, and Reveals nearby enemies.",
 
