--- a/common/src/main/resources/assets/simplyswords/lang/zh_cn.json
+++ b/common/src/main/resources/assets/simplyswords/lang/zh_cn.json
@@ -562,8 +562,8 @@
   "item.simplyswords.rendsworditem.tooltip6": "你，效果正比于消耗的叠加层数。",
 
   "item.simplyswords.soulsworditem.tooltip1": "独特效果：灵魂融合",
-  "item.simplyswords.soulsworditem.tooltip2": "击中时概率吸收周围的灵魂，使持",
-  "item.simplyswords.soulsworditem.tooltip3": "有者变得坚韧，并降低攻速调整数。",
+  "item.simplyswords.soulsworditem.tooltip2": "击中时概率吸收周围的灵魂，使",
+  "item.simplyswords.soulsworditem.tooltip3": "得持有者变得坚韧，并降低攻速。",
   "item.simplyswords.soulsworditem.tooltip4": "释放灵魂，将攻速减益",
   "item.simplyswords.soulsworditem.tooltip5": "转移到附近的敌人身上，",
   "item.simplyswords.soulsworditem.tooltip6": "同时恢复持有者的生命。",
